@@ -19,6 +19,7 @@ import ru.practicum.util.Statistical;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,7 +35,7 @@ public class PublicCompilationService {
         List<EventShortDto> shortDtos = allCompilationDtos
             .stream()
             .flatMap(x -> x.getEvents().stream())
-            .toList();
+            .collect(Collectors.toList());
         if (shortDtos.isEmpty()) {
             return allCompilationDtos;
         }
